--- a/package.json
+++ b/package.json
@@ -8,18 +8,38 @@
         "lint": "eslint \"src/**/*.ts\" --fix",
         "format": "prettier --write \"src/**/*.ts\" --config .prettierrc",
         "prebuild": "rm -rf dist && npm run lint && npm run format",
-        "build": "tsc -p tsconfig.json"
+        "build": "tsc -p tsconfig.json",
+        "test": "jest"
     },
     "dependencies": {
         "axios": "^0.19.2"
     },
     "devDependencies": {
         "@types/axios": "^0.14.0",
+        "@types/jest": "^26.0.9",
         "@types/node": "^14.0.27",
         "@typescript-eslint/eslint-plugin": "^3.9.0",
         "@typescript-eslint/parser": "^3.9.0",
         "eslint": "^7.6.0",
+        "jest": "^26.3.0",
         "prettier": "^2.0.5",
+        "ts-jest": "^26.2.0",
         "typescript": "^3.9.7"
+    },
+    "jest": {
+        "clearMocks": true,
+        "testEnvironment": "node",
+        "transform": {
+            "^.+\\.ts$": "ts-jest"
+        },
+        "moduleFileExtensions": [
+            "js",
+            "ts"
+        ],
+        "rootDir": "./",
+        "testMatch": [
+            "**/**/tests/**/*.spec.ts"
+        ],
+        "verbose": true
     }
 }
